--- a/gb/19/7/10/n11376364.md
+++ b/gb/19/7/10/n11376364.md
@@ -1,66 +1,71 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zmipil285/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/zmipil285/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zmipil285/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zmipil285/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zmipil285/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zmipil285/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>压力大易致“甲状腺亢进”二症状要当心</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/hyperthyroidism-3-0710-600x400.jpg" />
 <h6>甲状腺亢进与否，与人体状况有绝对的关系。（Shutterstock/大纪元制图）
 </h6>
 <hr>
 <p>人的器官生来多数是健康的，但是当人体环境变得越来越不好时，器官在不良的环境中就容易生病。不是原本器官有问题，而是受到不良环境的影响，因而不能发挥正常功能。就像脂肪肝，原本不是肝脏出问题，而是血液里“油太多”，胆固醇与三酸甘油脂都超过正常指标，肝脏泡在油油的血液中，能不油油的吗？渐渐的肝细胞变性成脂肪细胞，最后肝硬化，人就病危、死亡了。</p>
-<p><ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA.md#1">甲状腺</a>也是一样，为什么有些人甲状腺会过度分泌，而导致甲状腺机能亢进？<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA%E4%BA%A2%E8%BF%9B.md#1">甲状腺亢进</a>与否，与人体状况有绝对的关系。</p>
-<h2><span style="color: #008000;">经常<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E5%8E%8B%E5%8A%9B.md#1">压力</a>大，易致<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA%E4%BA%A2%E8%BF%9B.md#1">甲状腺亢进</a></span></h2>
-<p>如果一个人时常<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E5%8E%8B%E5%8A%9B.md#1">压力</a>很大、生闷气、失眠、头痛等，就很容易刺激<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA.md#1">甲状腺</a>素的分泌。甲状腺素分泌增加了，相对而言就会加快人体代谢速率，增加人的抗压性。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA.md#1">甲状腺</a>也是一样，为什么有些人甲状腺会过度分泌，而导致甲状腺机能亢进？<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA%E4%BA%A2%E8%BF%9B.md#1">甲状腺亢进</a>与否，与人体状况有绝对的关系。</p>
+<h2><span style="color: #008000;">经常<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%8B%E5%8A%9B.md#1">压力</a>大，易致<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA%E4%BA%A2%E8%BF%9B.md#1">甲状腺亢进</a></span></h2>
+<p>如果一个人时常<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8E%8B%E5%8A%9B.md#1">压力</a>很大、生闷气、失眠、头痛等，就很容易刺激<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%94%B2%E7%8A%B6%E8%85%BA.md#1">甲状腺</a>素的分泌。甲状腺素分泌增加了，相对而言就会加快人体代谢速率，增加人的抗压性。</p>
 <p>但是到了一定的程度之后，一旦分泌过度，人会变得极度暴躁，因为代谢太快的关系，思绪也静不下来，一切都在加速，连消化的速度都变快，体温还会上升，所以到最后身体平衡被破坏，感觉烦乱、虚脱、全身无力，人也就生病瘫下来了。严重者则会因为心跳太快，最后导致心律不整或猝死，西医称之为“甲状腺风暴”。</p>
-<p>在都会地区工作的人，罹患甲状腺亢进特别多，<span style="color: #800000;"><strong>较明显的症状如<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>肿大和眼睛凸出，就像金鱼的眼睛一样。</strong></span></p>
-<p>甲状腺素分泌过度，依<ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>观点看它的症状表现是属“阳性”，因为能量表现太高，所以一切都是过度的；反之，甲状腺素缺乏的人，“阳性表现”就会消失，出现机能低下和能量不足的现象，导致肠子蠕动降低，严重便秘；水液代谢变慢，下肢水肿，心脏也变得无力；整天想睡觉，但醒来后还是疲惫不堪等。</p>
+<p>在都会地区工作的人，罹患甲状腺亢进特别多，<span style="color: #800000;"><strong>较明显的症状如<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%84%96%E5%AD%90.md#1">脖子</a>肿大和眼睛凸出，就像金鱼的眼睛一样。</strong></span></p>
+<p>甲状腺素分泌过度，依<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>观点看它的症状表现是属“阳性”，因为能量表现太高，所以一切都是过度的；反之，甲状腺素缺乏的人，“阳性表现”就会消失，出现机能低下和能量不足的现象，导致肠子蠕动降低，严重便秘；水液代谢变慢，下肢水肿，心脏也变得无力；整天想睡觉，但醒来后还是疲惫不堪等。</p>
 <h2><span style="color: #008000;">保持内心平和，不让甲状腺生病</span></h2>
-<p><ahref="https://github.com/zmipil285/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>治疗甲状腺亢进，采用热者清之的办法，火气太大、细胞太活跃，就退肝心胃之火，使脏腑相对应的症状消退，甲状腺分泌就自然会回到正常的状态。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%AD%E5%8C%BB.md#1">中医</a>治疗甲状腺亢进，采用热者清之的办法，火气太大、细胞太活跃，就退肝心胃之火，使脏腑相对应的症状消退，甲状腺分泌就自然会回到正常的状态。</p>
 <p>环境不好了，是导致人生病的主因。人与人之间利益争夺当中，互不相让时，压力就容易上来，甲状腺就容易过度分泌；反之，在平和温馨的状态下，内心宁静，甲状腺就会平衡。甲状腺可说是易受情绪影响的器官，情绪不好或压力大，甲状腺就容易生病。甲状腺本身是没有病的，是一个人生活不正常，内心不平和所导致。◇</p>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/zmipil285/djy/blob/master/gb/19/6/24/n11343108.md#1" target="_blank" rel="noopener noreferrer">甲状腺癌症状是“颈部肿块”女性更要留心</a>?</span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/zmipil285/djy/blob/master/gb/16/11/9/n8475333.md#1" target="_blank" rel="noopener noreferrer">肾上腺疲劳的四种恢复方法（上）</a></span></h3>
-<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/zmipil285/djy/blob/master/gb/10/1/27/n2800450.md#1" target="_blank" rel="noopener noreferrer">【正梁中西医园地】甲状腺功能不足</a>?</span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/19/6/24/n11343108.md#1" target="_blank" rel="noopener noreferrer">甲状腺癌症状是“颈部肿块”女性更要留心</a>?</span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/9/n8475333.md#1" target="_blank" rel="noopener noreferrer">肾上腺疲劳的四种恢复方法（上）</a></span></h3>
+<h3><span style="color: #008000;">·?<a style="color: #008000;" href="https://github.com/ydbzqt347/djy/blob/master/gb/10/1/27/n2800450.md#1" target="_blank" rel="noopener noreferrer">【正梁中西医园地】甲状腺功能不足</a>?</span></h3>
 <p>责任编辑：李清风</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/17/5/3/n9103387.md#1">喜获大法的现代孝媳：法轮大法让我永远乐观</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/17/6/28/n9328365.md#1">“长寿菜”海带降血压、护甲状腺！3搭配更加分</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/9/17/n10719866.md#1">【医案】怒目眼睁</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/18/10/23/n10804105.md#1">不吃早餐 8种病跟着来？医师分享早餐秘诀</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/1/18/n10986528.md#1">符合3个特征是“焦虑症” 医师教你摆脱焦虑</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/1/31/n11015487.md#1">【甲状腺结节】是癌吗？</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/2/11/n11861773.md#1">【胡乃文开讲】痛风尿酸高？喝这碗汤可以改善</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/12/9/n11711222.md#1">快走或遛狗30分钟 可降低男性糖尿病风险</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/11/16/n11660306.md#1">豆浆加2种食物 降血糖又养生</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/19/11/11/n11646512.md#1">秋葵能降血糖  这样吃效果最好</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/3/n9103387.md#1">喜获大法的现代孝媳：法轮大法让我永远乐观</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/6/28/n9328365.md#1">“长寿菜”海带降血压、护甲状腺！3搭配更加分</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/9/17/n10719866.md#1">【医案】怒目眼睁</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/23/n10804105.md#1">不吃早餐 8种病跟着来？医师分享早餐秘诀</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/18/n10986528.md#1">符合3个特征是“焦虑症” 医师教你摆脱焦虑</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/31/n11015487.md#1">【甲状腺结节】是癌吗？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/18/n13586954.md#1">喝牛奶易得一型糖尿病？专家：有办法能预防</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/1/n13614012.md#1">2型糖尿病食疗可以改善 多种方法都有效</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10806244.md#1" target="_blank">林辉：当炮灰还成“叛徒”王成原型人生尽毁</a></li><li><a href="https://github.com/zmipil285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240138.md#1" target="_blank">美国麻州参议院祝贺第20届世界法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/7/n10199292.md#1" target="_blank">古玉文：消灭私有制不是出路（上）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11961699.md#1">追责中共隐瞒疫情 国际专家提六大方案</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11962341.md#1">对北京掩盖疫情失望 川普：中共非常诡秘</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/11/n11933384.md#1">断臂僧转世？小蛮童有胆 向康熙帝要官职</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/zmipil285/djy/blob/master/gb/20/3/21/n11961878.md#1">【历史回眸】人们忘记神 这就是一切的起因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zmipil285/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zmipil285/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/10/n11376364.htm">压力大易致“甲状腺亢进”二症状要当心</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/10/n11376364.htm">压力大易致“甲状腺亢进”二症状要当心</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/zmipil285/djy/blob/master/gb/19/7/10/n11376364.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zmipil285/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zmipil285/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zmipil285/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zmipil285/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmipil285/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/19/7/10/n11376364.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
